src/grammar.output
Terminals unused in grammar

   T_LESS
   T_ASSIGN


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclList

    2 ClassDeclList: %empty
    3              | ClassDeclList ClassDecl

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    5 ClassDecl: T_CLASS Id '{' VarDeclList MethodDeclList '}'

    6 VarDeclList: %empty
    7            | VarDeclList VarDecl

    8 StatementList: %empty
    9              | Statement StatementList

   10 MethodDeclList: %empty
   11               | MethodDeclList MethodDecl

   12 VarDecl: Type Id ';'

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'

   14 Type: T_INT '[' ']'
   15     | T_BOOL
   16     | T_INT
   17     | Id

   18 ArgList: %empty
   19        | Argument
   20        | ArgList ',' Argument

   21 Argument: Type Id

   22 Statement: '{' StatementList '}'
   23          | T_IF '(' Expression ')' Statement T_ELSE Statement
   24          | T_WHILE '(' Expression ')' Statement
   25          | T_PRINTLN '(' Expression ')' ';'
   26          | Id '=' Expression ';'
   27          | Id '[' Expression ']' '=' Expression ';'

   28 Expression: Expression T_AND Expression
   29           | Expression '<' Expression
   30           | Expression '+' Expression
   31           | Expression '-' Expression
   32           | '-' Expression
   33           | Expression '*' Expression
   34           | Expression '/' Expression
   35           | Expression '[' Expression ']'
   36           | Expression '.' T_LENGTH
   37           | Expression '.' Id '(' ExpressionList ')'
   38           | Number
   39           | T_TRUE
   40           | T_FALSE
   41           | Id
   42           | T_THIS
   43           | T_NEW T_INT '[' Expression ']'
   44           | T_NEW Id '(' ')'
   45           | '!' Expression
   46           | '(' Expression ')'

   47 ExpressionList: %empty
   48               | Expression
   49               | ExpressionList ',' Expression

   50 Id: T_ID

   51 Number: T_NUMBER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'(' (40) 4 13 23 24 25 37 44 46
')' (41) 4 13 23 24 25 37 44 46
'*' (42) 33
'+' (43) 30
',' (44) 20 49
'-' (45) 31 32
'.' (46) 36 37
'/' (47) 34
';' (59) 12 13 25 26 27
'<' (60) 29
'=' (61) 26 27
'[' (91) 4 14 27 35 43
']' (93) 4 14 27 35 43
'{' (123) 4 5 13 22
'}' (125) 4 5 13 22
error (256)
T_CLASS (258) 4 5
T_PUBLIC (259) 4 13
T_STATIC (260) 4
T_MAIN (261) 4
T_VOID (262) 4
T_INT (263) 14 16 43
T_BOOL (264) 15
T_IF (265) 23
T_ELSE (266) 23
T_RETURN (267) 13
T_LESS (268)
T_PRINTLN (269) 25
T_ASSIGN (270)
T_STRING (271) 4
T_AND (272) 28
T_NEW (273) 43 44
T_THIS (274) 42
T_LENGTH (275) 36
T_WHILE (276) 24
T_TRUE (277) 39
T_FALSE (278) 40
T_NUMBER (279) 51
T_ID (280) 50


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ClassDeclList (44)
    on left: 2 3, on right: 1 3
MainClass (45)
    on left: 4, on right: 1
ClassDecl (46)
    on left: 5, on right: 3
VarDeclList (47)
    on left: 6 7, on right: 5 7 13
StatementList (48)
    on left: 8 9, on right: 4 9 13 22
MethodDeclList (49)
    on left: 10 11, on right: 5 11
VarDecl (50)
    on left: 12, on right: 7
MethodDecl (51)
    on left: 13, on right: 11
Type (52)
    on left: 14 15 16 17, on right: 12 13 21
ArgList (53)
    on left: 18 19 20, on right: 13 20
Argument (54)
    on left: 21, on right: 19 20
Statement (55)
    on left: 22 23 24 25 26 27, on right: 9 23 24
Expression (56)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46, on right: 13 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 43
    45 46 48 49
ExpressionList (57)
    on left: 47 48 49, on right: 37 49
Id (58)
    on left: 50, on right: 4 5 12 13 17 21 26 27 37 41 44
Number (59)
    on left: 51, on right: 38


State 0

    0 $accept: . Program $end

    T_CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    4 MainClass: T_CLASS . Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_ID  shift, and go to state 4

    Id  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    1 Program: MainClass . ClassDeclList

    $default  reduce using rule 2 (ClassDeclList)

    ClassDeclList  go to state 7


State 4

   50 Id: T_ID .

    $default  reduce using rule 50 (Id)


State 5

    4 MainClass: T_CLASS Id . '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    '{'  shift, and go to state 8


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    1 Program: MainClass ClassDeclList .
    3 ClassDeclList: ClassDeclList . ClassDecl

    T_CLASS  shift, and go to state 9

    $default  reduce using rule 1 (Program)

    ClassDecl  go to state 10


State 8

    4 MainClass: T_CLASS Id '{' . T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_PUBLIC  shift, and go to state 11


State 9

    5 ClassDecl: T_CLASS . Id '{' VarDeclList MethodDeclList '}'

    T_ID  shift, and go to state 4

    Id  go to state 12


State 10

    3 ClassDeclList: ClassDeclList ClassDecl .

    $default  reduce using rule 3 (ClassDeclList)


State 11

    4 MainClass: T_CLASS Id '{' T_PUBLIC . T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_STATIC  shift, and go to state 13


State 12

    5 ClassDecl: T_CLASS Id . '{' VarDeclList MethodDeclList '}'

    '{'  shift, and go to state 14


State 13

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC . T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_VOID  shift, and go to state 15


State 14

    5 ClassDecl: T_CLASS Id '{' . VarDeclList MethodDeclList '}'

    $default  reduce using rule 6 (VarDeclList)

    VarDeclList  go to state 16


State 15

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID . T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_MAIN  shift, and go to state 17


State 16

    5 ClassDecl: T_CLASS Id '{' VarDeclList . MethodDeclList '}'
    7 VarDeclList: VarDeclList . VarDecl

    T_INT   shift, and go to state 18
    T_BOOL  shift, and go to state 19
    T_ID    shift, and go to state 4

    $default  reduce using rule 10 (MethodDeclList)

    MethodDeclList  go to state 20
    VarDecl         go to state 21
    Type            go to state 22
    Id              go to state 23


State 17

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN . '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    '('  shift, and go to state 24


State 18

   14 Type: T_INT . '[' ']'
   16     | T_INT .

    '['  shift, and go to state 25

    $default  reduce using rule 16 (Type)


State 19

   15 Type: T_BOOL .

    $default  reduce using rule 15 (Type)


State 20

    5 ClassDecl: T_CLASS Id '{' VarDeclList MethodDeclList . '}'
   11 MethodDeclList: MethodDeclList . MethodDecl

    T_PUBLIC  shift, and go to state 26
    '}'       shift, and go to state 27

    MethodDecl  go to state 28


State 21

    7 VarDeclList: VarDeclList VarDecl .

    $default  reduce using rule 7 (VarDeclList)


State 22

   12 VarDecl: Type . Id ';'

    T_ID  shift, and go to state 4

    Id  go to state 29


State 23

   17 Type: Id .

    $default  reduce using rule 17 (Type)


State 24

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' . T_STRING '[' ']' Id ')' '{' StatementList '}' '}'

    T_STRING  shift, and go to state 30


State 25

   14 Type: T_INT '[' . ']'

    ']'  shift, and go to state 31


State 26

   13 MethodDecl: T_PUBLIC . Type Id '(' ArgList ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'

    T_INT   shift, and go to state 18
    T_BOOL  shift, and go to state 19
    T_ID    shift, and go to state 4

    Type  go to state 32
    Id    go to state 23


State 27

    5 ClassDecl: T_CLASS Id '{' VarDeclList MethodDeclList '}' .

    $default  reduce using rule 5 (ClassDecl)


State 28

   11 MethodDeclList: MethodDeclList MethodDecl .

    $default  reduce using rule 11 (MethodDeclList)


State 29

   12 VarDecl: Type Id . ';'

    ';'  shift, and go to state 33


State 30

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING . '[' ']' Id ')' '{' StatementList '}' '}'

    '['  shift, and go to state 34


State 31

   14 Type: T_INT '[' ']' .

    $default  reduce using rule 14 (Type)


State 32

   13 MethodDecl: T_PUBLIC Type . Id '(' ArgList ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'

    T_ID  shift, and go to state 4

    Id  go to state 35


State 33

   12 VarDecl: Type Id ';' .

    $default  reduce using rule 12 (VarDecl)


State 34

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' . ']' Id ')' '{' StatementList '}' '}'

    ']'  shift, and go to state 36


State 35

   13 MethodDecl: T_PUBLIC Type Id . '(' ArgList ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'

    '('  shift, and go to state 37


State 36

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' . Id ')' '{' StatementList '}' '}'

    T_ID  shift, and go to state 4

    Id  go to state 38


State 37

   13 MethodDecl: T_PUBLIC Type Id '(' . ArgList ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'

    T_INT   shift, and go to state 18
    T_BOOL  shift, and go to state 19
    T_ID    shift, and go to state 4

    $default  reduce using rule 18 (ArgList)

    Type      go to state 39
    ArgList   go to state 40
    Argument  go to state 41
    Id        go to state 23


State 38

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id . ')' '{' StatementList '}' '}'

    ')'  shift, and go to state 42


State 39

   21 Argument: Type . Id

    T_ID  shift, and go to state 4

    Id  go to state 43


State 40

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList . ')' '{' VarDeclList StatementList T_RETURN Expression ';' '}'
   20 ArgList: ArgList . ',' Argument

    ')'  shift, and go to state 44
    ','  shift, and go to state 45


State 41

   19 ArgList: Argument .

    $default  reduce using rule 19 (ArgList)


State 42

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' . '{' StatementList '}' '}'

    '{'  shift, and go to state 46


State 43

   21 Argument: Type Id .

    $default  reduce using rule 21 (Argument)


State 44

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' . '{' VarDeclList StatementList T_RETURN Expression ';' '}'

    '{'  shift, and go to state 47


State 45

   20 ArgList: ArgList ',' . Argument

    T_INT   shift, and go to state 18
    T_BOOL  shift, and go to state 19
    T_ID    shift, and go to state 4

    Type      go to state 39
    Argument  go to state 48
    Id        go to state 23


State 46

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' . StatementList '}' '}'

    T_IF       shift, and go to state 49
    T_PRINTLN  shift, and go to state 50
    T_WHILE    shift, and go to state 51
    T_ID       shift, and go to state 4
    '{'        shift, and go to state 52

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 53
    Statement      go to state 54
    Id             go to state 55


State 47

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' '{' . VarDeclList StatementList T_RETURN Expression ';' '}'

    $default  reduce using rule 6 (VarDeclList)

    VarDeclList  go to state 56


State 48

   20 ArgList: ArgList ',' Argument .

    $default  reduce using rule 20 (ArgList)


State 49

   23 Statement: T_IF . '(' Expression ')' Statement T_ELSE Statement

    '('  shift, and go to state 57


State 50

   25 Statement: T_PRINTLN . '(' Expression ')' ';'

    '('  shift, and go to state 58


State 51

   24 Statement: T_WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 59


State 52

   22 Statement: '{' . StatementList '}'

    T_IF       shift, and go to state 49
    T_PRINTLN  shift, and go to state 50
    T_WHILE    shift, and go to state 51
    T_ID       shift, and go to state 4
    '{'        shift, and go to state 52

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 60
    Statement      go to state 54
    Id             go to state 55


State 53

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList . '}' '}'

    '}'  shift, and go to state 61


State 54

    9 StatementList: Statement . StatementList

    T_IF       shift, and go to state 49
    T_PRINTLN  shift, and go to state 50
    T_WHILE    shift, and go to state 51
    T_ID       shift, and go to state 4
    '{'        shift, and go to state 52

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 62
    Statement      go to state 54
    Id             go to state 55


State 55

   26 Statement: Id . '=' Expression ';'
   27          | Id . '[' Expression ']' '=' Expression ';'

    '='  shift, and go to state 63
    '['  shift, and go to state 64


State 56

    7 VarDeclList: VarDeclList . VarDecl
   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' '{' VarDeclList . StatementList T_RETURN Expression ';' '}'

    T_INT      shift, and go to state 18
    T_BOOL     shift, and go to state 19
    T_IF       shift, and go to state 49
    T_PRINTLN  shift, and go to state 50
    T_WHILE    shift, and go to state 51
    T_ID       shift, and go to state 4
    '{'        shift, and go to state 52

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 65
    VarDecl        go to state 21
    Type           go to state 22
    Statement      go to state 54
    Id             go to state 66


State 57

   23 Statement: T_IF '(' . Expression ')' Statement T_ELSE Statement

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 75
    Id          go to state 76
    Number      go to state 77


State 58

   25 Statement: T_PRINTLN '(' . Expression ')' ';'

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 78
    Id          go to state 76
    Number      go to state 77


State 59

   24 Statement: T_WHILE '(' . Expression ')' Statement

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 79
    Id          go to state 76
    Number      go to state 77


State 60

   22 Statement: '{' StatementList . '}'

    '}'  shift, and go to state 80


State 61

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' . '}'

    '}'  shift, and go to state 81


State 62

    9 StatementList: Statement StatementList .

    $default  reduce using rule 9 (StatementList)


State 63

   26 Statement: Id '=' . Expression ';'

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 82
    Id          go to state 76
    Number      go to state 77


State 64

   27 Statement: Id '[' . Expression ']' '=' Expression ';'

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 83
    Id          go to state 76
    Number      go to state 77


State 65

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' '{' VarDeclList StatementList . T_RETURN Expression ';' '}'

    T_RETURN  shift, and go to state 84


State 66

   17 Type: Id .
   26 Statement: Id . '=' Expression ';'
   27          | Id . '[' Expression ']' '=' Expression ';'

    '='  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 17 (Type)


State 67

   43 Expression: T_NEW . T_INT '[' Expression ']'
   44           | T_NEW . Id '(' ')'

    T_INT  shift, and go to state 85
    T_ID   shift, and go to state 4

    Id  go to state 86


State 68

   42 Expression: T_THIS .

    $default  reduce using rule 42 (Expression)


State 69

   39 Expression: T_TRUE .

    $default  reduce using rule 39 (Expression)


State 70

   40 Expression: T_FALSE .

    $default  reduce using rule 40 (Expression)


State 71

   51 Number: T_NUMBER .

    $default  reduce using rule 51 (Number)


State 72

   32 Expression: '-' . Expression

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 87
    Id          go to state 76
    Number      go to state 77


State 73

   45 Expression: '!' . Expression

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 88
    Id          go to state 76
    Number      go to state 77


State 74

   46 Expression: '(' . Expression ')'

    T_NEW     shift, and go to state 67
    T_THIS    shift, and go to state 68
    T_TRUE    shift, and go to state 69
    T_FALSE   shift, and go to state 70
    T_NUMBER  shift, and go to state 71
    T_ID      shift, and go to state 4
    '-'       shift, and go to state 72
    '!'       shift, and go to state 73
    '('       shift, and go to state 74

    Expression  go to state 89
    Id          go to state 76
    Number      go to state 77


State 75

   23 Statement: T_IF '(' Expression . ')' Statement T_ELSE Statement
   28 Expression: Expression . T_AND Expression
   29           | Expression . '<' Expression
   30           | Expression . '+' Expression
   31           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '[' Expression ']'
   36           | Expression . '.' T_LENGTH
   37           | Expression . '.' Id '(' ExpressionList ')'

    T_AND  shift, and go to state 90
    '<'    shift, and go to state 91
    '+'    shift, and go to state 92
    '-'    shift, and go to state 93
    '*'    shift, and go to state 94
    '/'    shift, and go to state 95
    '.'    shift, and go to state 96
    '['    shift, and go to state 97
    ')'    shift, and go to state 98


State 76

   41 Expression: Id .

    $default  reduce using rule 41 (Expression)


State 77

   38 Expression: Number .

    $default  reduce using rule 38 (Expression)


State 78

   25 Statement: T_PRINTLN '(' Expression . ')' ';'
   28 Expression: Expression . T_AND Expression
   29           | Expression . '<' Expression
   30           | Expression . '+' Expression
   31           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '[' Expression ']'
   36           | Expression . '.' T_LENGTH
   37           | Expression . '.' Id '(' ExpressionList ')'

    T_AND  shift, and go to state 90
    '<'    shift, and go to state 91
    '+'    shift, and go to state 92
    '-'    shift, and go to state 93
    '*'    shift, and go to state 94
    '/'    shift, and go to state 95
    '.'    shift, and go to state 96
    '['    shift, and go to state 97
    ')'    shift, and go to state 99


State 79

   24 Statement: T_WHILE '(' Expression . ')' Statement
   28 Expression: Expression . T_AND Expression
   29           | Expression . '<' Expression
   30           | Expression . '+' Expression
   31           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '[' Expression ']'
   36           | Expression . '.' T_LENGTH
   37           | Expression . '.' Id '(' ExpressionList ')'

    T_AND  shift, and go to state 90
    '<'    shift, and go to state 91
    '+'    shift, and go to state 92
    '-'    shift, and go to state 93
    '*'    shift, and go to state 94
    '/'    shift, and go to state 95
    '.'    shift, and go to state 96
    '['    shift, and go to state 97
    ')'    shift, and go to state 100


State 80

   22 Statement: '{' StatementList '}' .

    $default  reduce using rule 22 (Statement)


State 81

    4 MainClass: T_CLASS Id '{' T_PUBLIC T_STATIC T_VOID T_MAIN '(' T_STRING '[' ']' Id ')' '{' StatementList '}' '}' .

    $default  reduce using rule 4 (MainClass)


State 82

   26 Statement: Id '=' Expression . ';'
   28 Expression: Expression . T_AND Expression
   29           | Expression . '<' Expression
   30           | Expression . '+' Expression
   31           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '[' Expression ']'
   36           | Expression . '.' T_LENGTH
   37           | Expression . '.' Id '(' ExpressionList ')'

    T_AND  shift, and go to state 90
    '<'    shift, and go to state 91
    '+'    shift, and go to state 92
    '-'    shift, and go to state 93
    '*'    shift, and go to state 94
    '/'    shift, and go to state 95
    '.'    shift, and go to state 96
    '['    shift, and go to state 97
    ';'    shift, and go to state 101


State 83

   27 Statement: Id '[' Expression . ']' '=' Expression ';'
   28 Expression: Expression . T_AND Expression
   29           | Expression . '<' Expression
   30           | Expression . '+' Expression
   31           | Expression . '-' Expression
   33           | Expression . '*' Expression
   34           | Expression . '/' Expression
   35           | Expression . '[' Expression ']'
   36           | Expression . '.' T_LENGTH
   37           | Expression . '.' Id '(' ExpressionList ')'

    T_AND  shift, and go to state 90
    '<'    shift, and go to state 91
    '+'    shift, and go to state 92
    '-'    shift, and go to state 93
    '*'    shift, and go to state 94
    '/'    shift, and go to state 95
    '.'    shift, and go to state 96
    '['    shift, and go to state 97
    ']'    shift, and go to state 102


State 84

   13 MethodDecl: T_PUBLIC Type Id '(' ArgList ')' '{' VarDeclList StatementList T_RETURN . Expression ';' '}'
